[gd_scene load_steps=10 format=3 uid="uid://d12t8yeh4x5p4"]

[ext_resource type="Script" uid="uid://bno1usl0nv4xo" path="res://Scripts/ennemy.gd" id="1_1b0bn"]
[ext_resource type="Texture2D" uid="uid://h7xmmxep44xw" path="res://Art/Sprite/Sprite_0093_DP.png" id="2_pi3ax"]
[ext_resource type="Texture2D" uid="uid://1i112jgjiwam" path="res://Art/Sprite/neutral_projectile.png" id="3_ucqlk"]
[ext_resource type="PackedScene" uid="uid://b7soybtka5pyv" path="res://Can copy from/Scenes/HeatlhBar.tscn" id="4_pi3ax"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c481b"]
radius = 61.68468

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pi3ax"]
size = Vector2(20, 16.803322)

[sub_resource type="Animation" id="Animation_1b0bn"]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/projectileAnchor/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.96666664),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2.25, 2.25), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_pi3ax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/projectileAnchor/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2.25, 2.25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ucqlk"]
_data = {
&"Death": SubResource("Animation_1b0bn"),
&"RESET": SubResource("Animation_pi3ax")
}

[node name="Ennemy" type="CharacterBody2D" node_paths=PackedStringArray("health_bar", "anchor", "marker", "shoot_timer", "look_timer", "sprite") groups=["enemies"]]
collision_layer = 4
collision_mask = 3
motion_mode = 1
script = ExtResource("1_1b0bn")
health_bar = NodePath("ProgressBar")
anchor = NodePath("Sprite2D/projectileAnchor")
marker = NodePath("Sprite2D/projectileAnchor/bulletEmplacement")
shoot_timer = NodePath("ShootTimer")
look_timer = NodePath("LookAroundTimer")
sprite = NodePath("Sprite2D")
speed = 250.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(-2.25, 2.25)
texture = ExtResource("2_pi3ax")

[node name="projectileAnchor" type="Node2D" parent="Sprite2D"]
rotation = 3.1415927
scale = Vector2(0.44444445, -0.44444445)

[node name="bulletEmplacement" type="Marker2D" parent="Sprite2D/projectileAnchor"]
position = Vector2(116, 0)

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/projectileAnchor"]
position = Vector2(116, 0)
texture = ExtResource("3_ucqlk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c481b")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="LookAroundTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(-50.184628, 47.907196)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1, 0.9999999)
shape = SubResource("RectangleShape2D_pi3ax")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ucqlk")
}

[node name="ProgressBar" parent="." instance=ExtResource("4_pi3ax")]
offset_left = -122.0
offset_top = -175.0
offset_right = 121.0
offset_bottom = -148.0

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="LookAroundTimer" to="." method="_on_look_around_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
